--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -56,13 +56,16 @@ section {
 
 .section-header p {
  font-family: Inter;
-font-size: 15px;
-font-weight: 400;
-line-height: 33px;
+ font-size: 14px;
+ font-weight: 400;
+ line-height: 33px;
 letter-spacing: 0em;
 text-align: left;
 color: black;
 }
+/* section#contact {
+  padding-top: 0px;
+} */
 
 @media (max-width: 768px) {
   .section-header p {
@@ -581,6 +584,12 @@ section#hero {
   .iconslider{
     display: none!important;
   }
+  section{
+    padding: 0px 0;
+  }
+  section#hero {
+    padding-top: 12rem;
+}
   .about h2 {
         font-size: 20px!important;
     line-height: 27px!important;
@@ -623,7 +632,7 @@ color: black;
 
 .about h2 {
   font-family: Inter;
-font-size: 51px;
+font-size: 45px;
 font-weight: 600;
 line-height: 62px;
 letter-spacing: 0em;
@@ -788,7 +797,7 @@ color: black;
 }
 
 .features .feture-tabs {
-  margin-top: 30px;
+  margin-top: 70px;
 }
 
 .features .feture-tabs h3 {
@@ -1497,6 +1506,7 @@ color: black;
 .team {
 /*  background: #fff;*/
   padding: 60px 0;
+  padding-top: 0px;
 }
 
 .team .member {
@@ -1715,8 +1725,8 @@ color: black;
 
 .contact .php-email-form {
   background:transparent;
-  padding: 30px;
-  padding: 30px;
+  /* padding: 30px; */
+
   height: 100%;
 }
 
@@ -1789,6 +1799,7 @@ color: black;
   color: #fff;
   transition: 0.4s;
   border-radius: 0px;
+  border: 1px solid white;
 }
 
 .contact .php-email-form button[type=submit]:hover {
@@ -2320,7 +2331,7 @@ color: black;
 --------------------------------------------------------------*/
 .footer {
   background: #E9E9E9;
-  padding: 0 0 30px 0;
+  padding: 0 0 0px 0;
   font-size: 14px;
 }
 
@@ -2598,15 +2609,18 @@ content: '';
 }
 .Trending_heading{
   font-family: Inter;
-font-size: 51px;
+font-size: 45px;
 font-weight: 600;
 line-height: 62px;
 letter-spacing: 0em;
 text-align: left;
 color: black;
 }
-.iconslider{cursor: pointer;position: relative; width: auto;
-    left: 0%;top:0px;}
+.iconslider{    cursor: pointer;
+  position: relative;
+  /* width: 7%; */
+  left: 0%;
+  top: -27px;}
    
 }
 .swiper-button-next {
@@ -2616,8 +2630,8 @@ color: black;
     left: 0%;
 }
 .righticonside {
-    left: 21%;
-    top: -20px;
+  left: 5%;
+  top: -27px;
 }
 section#recent-blog-posts {
         background: #151515 !important;
@@ -2634,7 +2648,7 @@ color: white;
 }
 button.learn-more{
   font-family: Inter;
-  margin: 48px 0px;
+  margin: 0px 0px;
 font-size: 18px;
 font-weight: 600;
 line-height: 22px;
@@ -2648,7 +2662,7 @@ width: 100%;
 }
 section#contact {
    background: #151515 !important;
-    padding-bottom: 30px;
+    /* padding-bottom: 30px; */
 }
 button.learn-more:hover {
     background: black;
@@ -2656,7 +2670,7 @@ button.learn-more:hover {
 }
 .bgright_demo{
   background-image: url('../img/img_new/about_bg.png');
-  padding: 6rem;
+  /* padding: 6rem; */
   position: relative;
   padding-bottom: 0px;
 }
@@ -2664,7 +2678,7 @@ button.learn-more:hover {
   position: relative;
 }
 .bgright_demo::before{
-  background-color: rgb(0 0 0 / 59%);
+  background-color: rgb(0 0 0 / 61%);
   content: '';
   display: block;
   height: 100%;
@@ -2717,10 +2731,18 @@ h4.card-title span {
 .arrow img{
   float: right;
     width: 50px!important;
+    margin-top: -130px;
 }
 .team-slider.swiper {
-    overflow-y: visible;
-    overflow-x: clip;
+    /* overflow-y: visible;
+    overflow-x: clip; */
+}
+.about .about-tabs {
+  margin-top: 70px;
+}
+.contact .contact-tabs {
+  margin-top: 70px;
+  margin-bottom: 40px;
 }
 .team .card p{
       width: 100%;
@@ -2765,7 +2787,7 @@ div#carouselExampleCaptions .bg-dark{
     left: 0px;
 }
 .overlay{
-  background: #0000007a;
+  background: #0000009e;
 }
 .social-links h3{
       font-family: Inter;
@@ -2806,5 +2828,27 @@ div#carouselExampleCaptions .bg-dark{
     color: white;
 }
 .email_section{
-  margin-top: 2rem;
+
+}
+footer img {
+  width: 70%;
+}
+.centertype{
+  /* margin: 0 auto; */
+}
+nav#navbar {
+  border-right: 2px solid white;
+}
+.email_section {
+  float: right;
+  margin-top: 40px;
+}
+.test_class{
+  width:100px;
+}
+.team-slider .swiper {
+  padding: 4rem 0px 0px 0px !important;
+}
+.topspace{
+  margin-top:40px;
 }
